# nginxpwner

./: .coveragerc  AUTHORS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  install.sh  nginx-pwner-no-server-header.py  nginx.txt  nginxpwner-init.py  nginxpwner.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/nginxpwner/: nginx-pwner-no-server-header.py  nginx.txt
tests/: conftest.py  test_skeleton.py
