[metadata]
name = nginxpwner
version = 1.0.0
url='https://github.com/stark0de/nginxpwner',
description='Nginxpwner is a simple tool to look for common Nginx misconfigurations and vulnerabilities.',
author='stark0de',
author_email='emal@replacethis.com',
long_description = file: README.md
long_description_content_type = text/markdown
keywords=['Nginx' 'Audit Configuration' 'Nginx misconfigurations' 'Nginx vulnerabilities' ],


[options]
install_requires =
'requests_raw',
	'colorama',
    'bs4',
    'lxml',
	'requests'
	'packaging'.
	'pyfiglet',
	'termcolor',
	
#	
py_modules =
	scripts=['nginxpwner'],

